@@ -11,6 +11,7 @@
         ADDED - node coordinates are directly editable in the editor now
         ADDED - File picker allows you to use an existing map as a template
         CHANGE - Editor warns about older editor-config.php format now
+        ADDED - Editor now allows you to clone a node with all it's styling intact.
         
 0.92 - FIXED weathermap CLI help said --random-data instead of --randomdata
        FIXED one last php short_tag in poller_common.php - thanks Bernado Diez
